--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".selection"></activity>
+        <activity android:name=".detailActivity"></activity>
+        <activity android:name=".selection" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
